hphp/hack/test/typecheck/reactive/mutable_args5.php
<?hh // strict

class A {
  <<__Rx, __Mutable>>
  public function f(): void {
    // ERROR: aliasing mutable this
    $a = $this;
  }
}
